--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <h1 [innerHtml]="title" class="title">
+  </h1>
+  <app-quote></app-quote>
+  <app-footer></app-footer>
+</div>
