fix footer and nav positioning

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="container">
-  <h1 [innerHtml]="title" class="title">
-  </h1>
-  <app-quote></app-quote>
+  <div id="main-content">
+    <h1 [innerHtml]="title" class="title">
+    </h1>
+    <app-quote></app-quote>
+  </div>
   <app-footer></app-footer>
 </div>
