--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,7 +9,15 @@ h1 {
     margin: 1em;
 }
 .container {
+    width: 100%;
     padding: 0px 1em;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+#main-content {
+    flex: 1;
 }
 @media (min-width: 600px) {
     .container {
